tests/negative/typecheck/union-right-non-sum.orng
fn main() -> Int {
    let const A = (x | y) || Int
    0
}